--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,5 @@
 html {
-  background: url(https://images4.alphacoders.com/566/thumb-1920-566668.jpg) no-repeat center center fixed;
+  background: url(https://i.imgur.com/uz6VDwh.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
